8260517: Compiler implementation for Sealed Classes